--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hotstar?createTableIfNotExists=true
+spring.datasource.url=jdbc:mysql://localhost:3306/hotstardb?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=d@rp@n12314
 spring.jpa.hibernate.ddl-auto=update
 
